Fix UI issue on small screens

--- a/src/static/css/custom.scss
+++ b/src/static/css/custom.scss
@@ -269,7 +269,7 @@ section.aids {
     }
 
     div.list-actions {
-        span {
+        &>span {
             @extend .mr-auto;
             @extend .ml-3;
         }
